# fire-scan

./: .gitignore  README.md  kotatsu_sources.txt  package-lock.json  package.json
scripts/: inspect_db.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240306000001_initial_schema.sql  20260306203000_add_source_id_to_manga.sql
src-tauri/src/: main.rs  sources.json
src-tauri/src/commands/: admin.rs  download.rs  favorites.rs  library.rs  mod.rs  reader.rs  search.rs  settings.rs  sources.rs
src-tauri/src/config/: database.rs  init.rs  mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/reader/: mod.rs
src-tauri/src/scraper/: mod.rs
src-tauri/src/search/: mod.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-ui/src/: App.tsx
src-ui/src/assets/icons/: niaddlogo.jfif
src-ui/src/components/common/: Header.tsx  Loading.tsx  Sidebar.tsx  Toast.tsx
src-ui/src/hooks/: useLibrary.ts  useSearch.ts  useSources.ts
src-ui/src/pages/: Downloads.tsx  Favorites.tsx  Library.tsx  ManualDownload.tsx  Search.tsx  Settings.tsx  Sources.tsx
src-ui/src/styles/: globals.css
src-ui/src/utils/: apiClient.ts  dateFormatter.ts
