[package]
name = "firescan"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all"] }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
log = "0.4"
env_logger = "0.11"
fern = "0.6"
futures = "0.3"
regex = "1.10"
zip = "0.6"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
walkdir = "2.4"
directories = "5.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
select = "0.6.0"
urlencoding = "2.1"
once_cell = "1.18"
rusqlite = "0.29"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"
